iaac/blueprint/infra/base/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis-metrics
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 9121
      targetPort: 9121
      protocol: TCP
      name: metrics
  selector:
    app: redis
